--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.1.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron ./main.js"
   },
   "dependencies": {
-    "electron": "^13.1.4",
-    "electron-prompt": "^1.6.2",
-    "smalltalk": "^4.0.7"
+  },
+  "devDependencies": {
+    "electron": "^13.1.4"
   }
 }
