--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "Camera-Simulation",
-  "version": "1.1.0",
+  "version": "0.1.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron ./main.js"
-  },
-  "dependencies": {
+    "start": "webpack && electron ./main.js"
   },
   "devDependencies": {
-    "electron": "^13.1.4"
+    "electron": "^13.1.4",
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "three": "^0.130.1"
   }
 }
