--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "devDependencies": {
     "electron": "^13.1.4",
     "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "three": "^0.130.1"
   },
   "dependencies": {
-    "three": "^0.130.1"
   }
 }
